--- a/app/src/main/res/layout/activity_activity_details.xml
+++ b/app/src/main/res/layout/activity_activity_details.xml
@@ -12,6 +12,7 @@
 <fragment
     android:id="@+id/fDetails"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:name="con.nemo.fragmentconnectionlistview.DetailsFragment"/>
 
 </LinearLayout>
